--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
-        * {
+        /* * {
             border: 4px solid red;
-        }
+        } */
         
         body {
             font-family: 'Poppins', sans-serif;
@@ -10,7 +10,7 @@
         main {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
-            margin: 50px 140px;
+            /* margin: 50px 140px; */
         }
         
         .three {
@@ -184,6 +184,10 @@ grid-template-columns: repeat(2, 1fr); */
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+            }
+            .three {
+                width: 100vw;
+                flex-wrap: wrap;
             }
             .container {
                 width: 100%;
